# minecraft

dlog/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
dlog/api/: Cargo.toml
dlog/api/src/: main.rs
dlog/core/: Cargo.toml
dlog/core/src/: lib.rs
dlog/corelib/: Cargo.toml
dlog/corelib/src/: lib.rs
dlog/spec/: Cargo.toml
dlog/spec/src/: lib.rs
godmode/: banned-players.json  bpm_sync.json  eula.txt  forwarding.secret  ops.json  options.txt  paper.yml  run_server.command  server.properties  spigot.yml  usercache.json
godmode/crash-reports/: crash-2025-11-16_02.04.19-server.txt  crash-2025-11-16_03.07.45-server.txt  crash-2025-11-16_03.12.38-server.txt  crash-2025-11-16_03.14.45-server.txt  crash-2025-11-16_03.16.01-server.txt  crash-2025-11-16_03.18.35-server.txt  crash-2025-11-16_03.23.14-server.txt  crash-2025-11-16_03.37.10-server.txt  crash-2025-11-16_03.39.58-server.txt  crash-2025-11-16_04.14.48-server.txt  (+5 more)
godmode/world/: level.dat_old
omega_numpy_container/: omega_phi_8888_engine.py  omega_phi_flame_engine.py  omega_session_omega.txt  omega_vortex_demo.py  omega_vortex_drop.py
sky/: 8xd_geom_backend.py  8xd_mic_engine.command  8xd_numpy_audiophile_engine.py  8xd_numpy_lion_engine.py  bpm_sync.json  coord_mapping_examples.json  coord_mapping_lock.txt  coord_mirror_orbit.json  create_project.command  dependency-reduced-pom.xml  geom_frame.json  mic_engine_8xd.py  numpy_coord_mapper.py  omega_base8_harmonics.py  omega_state_stream.py  pom.xml  quadrant_channel_splitter.py  screen_colormap_generator.py  screen_quadrant_mapper.py
(+60 files in other folders)
