[workspace]
members = [
    "spec",
    "corelib",
    "api",
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Luke Johnson"]
description = "dlog workspace (spec, corelib, api)"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
